--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
   ],
   "devDependencies": {
     "jquery": "^2.2.2",
-    "font-awesome": "fontawesome#^4.6.3"
+    "font-awesome": "fontawesome#^4.6.3",
+    "oauth-signature": "^1.3.1"
   }
 }
