--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "jquery": "^2.2.2",
     "font-awesome": "fontawesome#^4.6.3",
-    "oauth-signature": "^1.3.1"
+    "oauth-signature": "^1.3.1",
+    "knockout": "^3.4.0"
   }
 }
